--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,11 @@
 
+*, *::before, *::after {
+    box-sizing: border-box;
+   }
+
+body {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
 #game-area {
     width: 1000px;
     height: 600px;
@@ -28,4 +35,20 @@
     margin: 0 auto;
     position: relative;
     top: 75px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.plot {
+    width: 190px;
+    height: 175px;
+    background-color: brown;
+}
+.plot .econ-ui {
+    text-align: center;
+    position: relative;
+    top: 90px;
+}
+.plot .econ-ui p {
+    padding-bottom: 8px;
+    font-size: 1.25rem;
 }
