--- a/project/styles.css
+++ b/project/styles.css
@@ -42,13 +42,21 @@ body {
     width: 190px;
     height: 175px;
     background-color: brown;
+    position: relative;
 }
 .plot .econ-ui {
     text-align: center;
-    position: relative;
+    position: absolute;
     top: 90px;
+    left:45px;
 }
 .plot .econ-ui p {
     padding-bottom: 8px;
     font-size: 1.25rem;
+}
+.plant {
+    background-color: aliceblue;
+    width: 170px;
+    height: 155px;
+    margin: 0 auto;
 }
