so much pixel art

--- a/project/styles.css
+++ b/project/styles.css
@@ -57,7 +57,7 @@ body {
 #buy-area {
     width: 950px;
     height: 100px;
-    background-color: green;
+    /* background-color: green; */
     margin: 0 auto;
     position: relative;
     top: 50px;
@@ -67,7 +67,7 @@ body {
     width: 100px;
     height: 60px;
     margin: 10px 0 5px 10px;
-    background: aliceblue;
+    /* background: aliceblue; */
     visibility: hidden;
 }
 .buyplant p {
@@ -81,11 +81,20 @@ body {
 .buyplant div {
     width: 100px;
     height: 75px;
-    background: aliceblue;
+    /* background: aliceblue; */
 }
 .buyplant .info {
     text-align: center;
     background-color: transparent;
+}
+#tulip {
+    background: url(img/tulippotted.png);
+}
+#daisy {
+    background: url(img/daisypotted.png);
+}
+#lilac {
+    background: url(img/lilacpotted.png);
 }
 #grow-area {
     font-family: 'Fredoka One', cursive;
