--- a/project/the-pixel-patch/styles.css
+++ b/project/the-pixel-patch/styles.css
@@ -38,7 +38,20 @@ ul {
 ul li {
     padding: 10px 20px 20px
 }
+main {
+    width: 100%;
+}
 
+#cloudcover {
+    position: absolute;
+    width: 1000px;
+    height: 700px;
+    background:url('img/cloudcover.png');
+    background-size: cover;
+    margin: 0 auto;
+    border-radius: 20px;
+    /* z-index: 9999; */
+}
 
 
 #game-area {
@@ -62,12 +75,12 @@ ul li {
 #ui div{
     width: 30%;
     font-size: 2.5rem;
-    padding: 0 20px 0 0;
+    padding: 0 0px 0 0;
     -webkit-text-stroke: 1px rgb(129, 136, 156);
     
 }
 #ui div p {
-    padding-left: 40px;
+    padding-left: 5px;
     padding-top: 5px;
 
 }
